# Homework2.11

Homework2.11.1/: Homework2.11.1.cpp  Homework2.11.1.vcxproj  Homework2.11.1.vcxproj.filters
Homework2.11.1.Lib/: Homework2.11.1.Lib.cpp  Homework2.11.1.Lib.h  Homework2.11.1.Lib.sln  Homework2.11.1.Lib.vcxproj  Homework2.11.1.Lib.vcxproj.filters
Homework2.11.2/: Homework2.11.2.cpp  Homework2.11.2.sln  Homework2.11.2.vcxproj  Homework2.11.2.vcxproj.filters
Homework2.11.2Lib/: Homework2.11.2Lib.cpp  Homework2.11.2Lib.h  Homework2.11.2Lib.vcxproj  Homework2.11.2Lib.vcxproj.filters
Homework2.11.3/: CMakeLists.txt  Homework2.11.3.cpp  Homework2.11.3.vcxproj  Homework2.11.3.vcxproj.filters
Homework2.11.3/Homework2.11.3Lib/: CMakeLists.txt  Homework2.11.3Lib.cpp  Homework2.11.3Lib.h  Homework2.11.3Lib.sln  Homework2.11.3Lib.vcxproj  Homework2.11.3Lib.vcxproj.filters
Homework2.11.4/: Homework2.6.3.cpp  Homework2.6.3.sln  Homework2.6.3.vcxproj  Homework2.6.3.vcxproj.filters
Homework2.11.4Lib/: FigureHeader.h  Homework2.11.4Lib.sln  Homework2.11.4Lib.vcxproj  Homework2.11.4Lib.vcxproj.filters  ParallelogramHeader.h  QuadrilateralHeader.h  (+7 more)
Homework2.11.5/: CMakeLists.txt  Homework2.11.5.sln  Homework2.11.5.vcxproj  Homework2.11.5.vcxproj.filters
Homework2.11.5/Homework2.11.5Lib/: CMakeLists.txt  FigureHeader.h  Homework2.11.5Lib.vcxproj  Homework2.11.5Lib.vcxproj.filters  ParallelogramHeader.h  QuadrilateralHeader.h  RectangleHeader.h  RhombusHeader.h  SquareHeader.h  Triangle2SideEqualHeader.h  Triangle90Header.h  TriangleAllEqualHeader.h  TriangleHeader.h
