cmake_minimum_required (VERSION 3.10)
set(CMAKE_CCX_STANDART 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
project(Homework2.11.5)
include_directories(Homework2.11.5Lib)
set(SOURCE_EXE Homework2.11.5.cpp)
add_executable(Homework2.11.5 ${SOURCE_EXE})
add_subdirectory(Homework2.11.5Lib)
target_link_libraries(Homework2.11.5 Homework2.11.5Lib)